--- a/backEnd/Tecnolo/src/main/resources/application.properties
+++ b/backEnd/Tecnolo/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bancotechacademy4_2
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql:true
+spring.jpa.show-sql=true
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=false
